Code Review: Refactor / Quality

--- a/Sphere/Common/Database/Config/Gatekeeper.ini
+++ b/Sphere/Common/Database/Config/Gatekeeper.ini
@@ -1,30 +1,30 @@
 [Access:]
-Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Driver = PdoMySql
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGatekeeper'
 
 [Account:]
-Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Driver = PdoMySql
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGatekeeper'
 
 [Token:]
-Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Driver = PdoMySql
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaGatekeeper'
 
 [Consumer:]
-Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Driver = PdoMySql
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
