--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -3,16 +3,16 @@
 ;#################################################################
 
 [Person:DS]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Driver = PdoMySql
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaPerson'
 
 [Address:DS]
-Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Driver = PdoMySql
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -20,7 +20,7 @@ Database = 'KredaAddress'
 
 [Education:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -28,7 +28,7 @@ Database = 'KredaEducation'
 
 [Course:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -36,7 +36,7 @@ Database = 'KredaCourse'
 
 [Student:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -48,7 +48,7 @@ Database = 'KredaStudent'
 
 [Person:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -56,7 +56,7 @@ Database = 'KredaPerson'
 
 [Address:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -64,7 +64,7 @@ Database = 'KredaAddress'
 
 [Education:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -72,7 +72,7 @@ Database = 'KredaEducation'
 
 [Course:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -80,7 +80,7 @@ Database = 'KredaCourse'
 
 [Student:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -92,7 +92,7 @@ Database = 'KredaStudent'
 
 [Person:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -100,7 +100,7 @@ Database = 'KredaPerson'
 
 [Address:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -108,7 +108,7 @@ Database = 'KredaAddress'
 
 [Education:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -116,7 +116,7 @@ Database = 'KredaEducation'
 
 [Course:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -124,7 +124,7 @@ Database = 'KredaCourse'
 
 [Student:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -136,7 +136,7 @@ Database = 'KredaStudent'
 
 [Person:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -144,7 +144,7 @@ Database = 'KredaPerson'
 
 [Address:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -152,7 +152,7 @@ Database = 'KredaAddress'
 
 [Education:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -160,7 +160,7 @@ Database = 'KredaEducation'
 
 [Course:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -168,7 +168,7 @@ Database = 'KredaCourse'
 
 [Student:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -180,7 +180,7 @@ Database = 'KredaStudent'
 
 [Person:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -188,7 +188,7 @@ Database = 'KredaPerson'
 
 [Address:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -196,7 +196,7 @@ Database = 'KredaAddress'
 
 [Education:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -204,7 +204,7 @@ Database = 'KredaEducation'
 
 [Course:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -212,7 +212,7 @@ Database = 'KredaCourse'
 
 [Student:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -224,7 +224,7 @@ Database = 'KredaStudent'
 
 [Person:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -232,7 +232,7 @@ Database = 'KredaPerson'
 
 [Address:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -240,7 +240,7 @@ Database = 'KredaAddress'
 
 [Education:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -248,7 +248,7 @@ Database = 'KredaEducation'
 
 [Course:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -256,7 +256,7 @@ Database = 'KredaCourse'
 
 [Student:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -268,7 +268,7 @@ Database = 'KredaStudent'
 
 [Person:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -276,7 +276,7 @@ Database = 'KredaPerson'
 
 [Address:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -284,7 +284,7 @@ Database = 'KredaAddress'
 
 [Education:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -292,7 +292,7 @@ Database = 'KredaEducation'
 
 [Course:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -300,7 +300,7 @@ Database = 'KredaCourse'
 
 [Student:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -312,7 +312,7 @@ Database = 'KredaStudent'
 
 [Person:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -320,7 +320,7 @@ Database = 'KredaPerson'
 
 [Address:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -328,7 +328,7 @@ Database = 'KredaAddress'
 
 [Education:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -336,7 +336,7 @@ Database = 'KredaEducation'
 
 [Course:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -344,7 +344,7 @@ Database = 'KredaCourse'
 
 [Student:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -356,7 +356,7 @@ Database = 'KredaStudent'
 
 [Person:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -364,7 +364,7 @@ Database = 'KredaPerson'
 
 [Address:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -372,7 +372,7 @@ Database = 'KredaAddress'
 
 [Education:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -380,7 +380,7 @@ Database = 'KredaEducation'
 
 [Course:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -388,7 +388,7 @@ Database = 'KredaCourse'
 
 [Student:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -400,7 +400,7 @@ Database = 'KredaStudent'
 
 [Person:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -408,7 +408,7 @@ Database = 'KredaPerson'
 
 [Address:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -416,7 +416,7 @@ Database = 'KredaAddress'
 
 [Education:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -424,7 +424,7 @@ Database = 'KredaEducation'
 
 [Course:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -432,7 +432,7 @@ Database = 'KredaCourse'
 
 [Student:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
