--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -4,7 +4,47 @@
 
 [Account:DS]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:DS]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:DS]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:DS]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:DS]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:DS]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -16,7 +56,47 @@ Database = 'KredaBilling'
 
 [Account:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -28,7 +108,47 @@ Database = 'KredaBilling'
 
 [Account:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -40,7 +160,47 @@ Database = 'KredaBilling'
 
 [Account:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -52,7 +212,47 @@ Database = 'KredaBilling'
 
 [Account:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -64,7 +264,47 @@ Database = 'KredaBilling'
 
 [Account:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -76,7 +316,47 @@ Database = 'KredaBilling'
 
 [Account:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -88,7 +368,47 @@ Database = 'KredaBilling'
 
 [Account:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -100,7 +420,47 @@ Database = 'KredaBilling'
 
 [Account:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -112,7 +472,47 @@ Database = 'KredaBilling'
 
 [Account:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.10.178'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
