--- a/Sphere/Common/Database/Config/System.ini
+++ b/Sphere/Common/Database/Config/System.ini
@@ -1,6 +1,6 @@
 [Protocol:]
-Driver = 'PdoMySql'
-Host = '192.168.10.179'
+Driver = PdoMySql
+Host = '192.168.1.201'
 Port =
 Username = 'kreda'
 Password = 'kreda'
