Code Review: Refactor / Quality

--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -42,6 +42,14 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
 
+[Contact:DS]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
+
 ;#################################################################
 ;# EGE
 ;#################################################################
@@ -85,6 +93,14 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
+
+[Contact:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
 
 ;#################################################################
 ;# ESVL
@@ -130,6 +146,14 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
 
+[Contact:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
+
 ;#################################################################
 ;# ESZC
 ;#################################################################
@@ -173,6 +197,14 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
+
+[Contact:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
 
 ;#################################################################
 ;# EVAMTL
@@ -218,6 +250,14 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
 
+[Contact:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
+
 ;#################################################################
 ;# EVAP
 ;#################################################################
@@ -261,6 +301,14 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
+
+[Contact:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
 
 ;#################################################################
 ;# EVOSG
@@ -306,6 +354,14 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
 
+[Contact:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
+
 ;#################################################################
 ;# EZGH
 ;#################################################################
@@ -349,6 +405,14 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
+
+[Contact:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
 
 ;#################################################################
 ;# LWSZ
@@ -394,6 +458,14 @@ Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
 
+[Contact:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
+
 ;#################################################################
 ;# FEGH
 ;#################################################################
@@ -437,3 +509,11 @@ Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaStudent'
+
+[Contact:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.1.201'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaContact'
