--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -42,6 +42,14 @@ Username = 'root'
 Password = ''
 Database = 'KredaStudent'
 
+[Company:DS]
+Driver = 'PdoMySql'
+Host = '127.0.0.1'
+Port =
+Username = 'root'
+Password = ''
+Database = 'KredaCompany'
+
 ;#################################################################
 ;# EGE
 ;#################################################################
