--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -50,6 +50,14 @@ Username = 'root'
 Password = ''
 Database = 'KredaCompany'
 
+[TableView:DS]
+Driver = 'PdoMySql'
+Host = '127.0.0.1'
+Port =
+Username = 'root'
+Password = ''
+Database = 'KredaTableView'
+
 ;#################################################################
 ;# EGE
 ;#################################################################
