Code Review: Refactor/Quality

--- a/Sphere/Common/Database/Config/Billing.ini
+++ b/Sphere/Common/Database/Config/Billing.ini
@@ -4,144 +4,516 @@
 
 [Account:DS]
 Driver = 'PdoMySql'
-Host = '127.0.0.1'
+Host = '192.168.10.178'
 Port =
-Username = 'root'
-Password = ''
+Username = 'kreda'
+Password = 'kreda'
 Database = 'KredaBilling'
 
 [Banking:DS]
 Driver = 'PdoMySql'
-Host = '127.0.0.1'
+Host = '192.168.10.178'
 Port =
-Username = 'root'
-Password = ''
+Username = 'kreda'
+Password = 'kreda'
 Database = 'KredaBilling'
 
 [Commodity:DS]
 Driver = 'PdoMySql'
-Host = '127.0.0.1'
+Host = '192.168.10.178'
 Port =
-Username = 'root'
-Password = ''
+Username = 'kreda'
+Password = 'kreda'
 Database = 'KredaBilling'
 
 [Basket:DS]
 Driver = 'PdoMySql'
-Host = '127.0.0.1'
+Host = '192.168.10.178'
 Port =
-Username = 'root'
-Password = ''
+Username = 'kreda'
+Password = 'kreda'
 Database = 'KredaBilling'
 
 [Invoice:DS]
 Driver = 'PdoMySql'
-Host = '127.0.0.1'
+Host = '192.168.10.178'
 Port =
-Username = 'root'
-Password = ''
+Username = 'kreda'
+Password = 'kreda'
 Database = 'KredaBilling'
 
 [Balance:DS]
 Driver = 'PdoMySql'
-Host = '127.0.0.1'
+Host = '192.168.10.178'
 Port =
-Username = 'root'
-Password = ''
+Username = 'kreda'
+Password = 'kreda'
 Database = 'KredaBilling'
 
 ;#################################################################
 ;# EGE
 ;#################################################################
-;
-;[Account:EGE]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaBilling'
-;
-;;#################################################################
-;;# ESVL
-;;#################################################################
-;
-;[Account:ESVL]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaBilling'
-;
-;;#################################################################
-;;# ESZC
-;;#################################################################
-;
-;[Account:ESZC]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaBilling'
-;
-;;#################################################################
-;;# EVAMTL
-;;#################################################################
-;
-;[Account:EVAMTL]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaBilling'
-;
-;;#################################################################
-;;# EVAP
-;;#################################################################
-;
-;[Account:EVAP]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaBilling'
-;
-;;#################################################################
-;;# EVOSG
-;;#################################################################
-;
-;[Account:EVOSG]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaBilling'
-;
-;;#################################################################
-;;# EZGH
-;;#################################################################
-;
-;[Account:EZGH]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaBilling'
-;
-;;#################################################################
-;;# LWSZ
-;;#################################################################
-;
-;[Account:LWSZ]
-;Driver = 'PdoMySql'
-;Host = '192.168.10.178'
-;Port =
-;Username = 'kreda'
-;Password = 'kreda'
-;Database = 'KredaBilling'
+
+[Account:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EGE]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+;#################################################################
+;# ESVL
+;#################################################################
+
+[Account:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:ESVL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+;#################################################################
+;# ESZC
+;#################################################################
+
+[Account:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:ESZC]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+;#################################################################
+;# EVAMTL
+;#################################################################
+
+[Account:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EVAMTL]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+;#################################################################
+;# EVAP
+;#################################################################
+
+[Account:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EVAP]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+;#################################################################
+;# EVOSG
+;#################################################################
+
+[Account:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EVOSG]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+;#################################################################
+;# EZGH
+;#################################################################
+
+[Account:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:EZGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+;#################################################################
+;# LWSZ
+;#################################################################
+
+[Account:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:LWSZ]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+;#################################################################
+;# FEGH
+;#################################################################
+
+[Account:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Banking:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Commodity:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Basket:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Invoice:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
+
+[Balance:FEGH]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaBilling'
