--- a/Sphere/Common/Database/Config/Management.ini
+++ b/Sphere/Common/Database/Config/Management.ini
@@ -4,7 +4,7 @@
 
 [Person:DS]
 Driver = PdoMySql
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -12,7 +12,7 @@ Database = 'KredaPerson'
 
 [Address:DS]
 Driver = PdoMySql
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -20,7 +20,7 @@ Database = 'KredaAddress'
 
 [Education:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -28,7 +28,7 @@ Database = 'KredaEducation'
 
 [Course:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -36,7 +36,7 @@ Database = 'KredaCourse'
 
 [Student:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -44,11 +44,27 @@ Database = 'KredaStudent'
 
 [Contact:DS]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
 Database = 'KredaContact'
+
+[Company:DS]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaCompany'
+
+[TableView:DS]
+Driver = 'PdoMySql'
+Host = '192.168.10.178'
+Port =
+Username = 'kreda'
+Password = 'kreda'
+Database = 'KredaTableView'
 
 ;#################################################################
 ;# EGE
@@ -56,7 +72,7 @@ Database = 'KredaContact'
 
 [Person:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -64,7 +80,7 @@ Database = 'KredaPerson'
 
 [Address:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -72,7 +88,7 @@ Database = 'KredaAddress'
 
 [Education:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -80,7 +96,7 @@ Database = 'KredaEducation'
 
 [Course:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -88,7 +104,7 @@ Database = 'KredaCourse'
 
 [Student:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -96,7 +112,7 @@ Database = 'KredaStudent'
 
 [Contact:EGE]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -108,7 +124,7 @@ Database = 'KredaContact'
 
 [Person:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -116,7 +132,7 @@ Database = 'KredaPerson'
 
 [Address:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -124,7 +140,7 @@ Database = 'KredaAddress'
 
 [Education:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -132,7 +148,7 @@ Database = 'KredaEducation'
 
 [Course:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -140,7 +156,7 @@ Database = 'KredaCourse'
 
 [Student:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -148,7 +164,7 @@ Database = 'KredaStudent'
 
 [Contact:ESVL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -160,7 +176,7 @@ Database = 'KredaContact'
 
 [Person:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -168,7 +184,7 @@ Database = 'KredaPerson'
 
 [Address:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -176,7 +192,7 @@ Database = 'KredaAddress'
 
 [Education:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -184,7 +200,7 @@ Database = 'KredaEducation'
 
 [Course:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -192,7 +208,7 @@ Database = 'KredaCourse'
 
 [Student:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -200,7 +216,7 @@ Database = 'KredaStudent'
 
 [Contact:ESZC]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -212,7 +228,7 @@ Database = 'KredaContact'
 
 [Person:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -220,7 +236,7 @@ Database = 'KredaPerson'
 
 [Address:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -228,7 +244,7 @@ Database = 'KredaAddress'
 
 [Education:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -236,7 +252,7 @@ Database = 'KredaEducation'
 
 [Course:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -244,7 +260,7 @@ Database = 'KredaCourse'
 
 [Student:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -252,7 +268,7 @@ Database = 'KredaStudent'
 
 [Contact:EVAMTL]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -264,7 +280,7 @@ Database = 'KredaContact'
 
 [Person:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -272,7 +288,7 @@ Database = 'KredaPerson'
 
 [Address:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -280,7 +296,7 @@ Database = 'KredaAddress'
 
 [Education:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -288,7 +304,7 @@ Database = 'KredaEducation'
 
 [Course:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -296,7 +312,7 @@ Database = 'KredaCourse'
 
 [Student:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -304,7 +320,7 @@ Database = 'KredaStudent'
 
 [Contact:EVAP]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -316,7 +332,7 @@ Database = 'KredaContact'
 
 [Person:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -324,7 +340,7 @@ Database = 'KredaPerson'
 
 [Address:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -332,7 +348,7 @@ Database = 'KredaAddress'
 
 [Education:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -340,7 +356,7 @@ Database = 'KredaEducation'
 
 [Course:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -348,7 +364,7 @@ Database = 'KredaCourse'
 
 [Student:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -356,7 +372,7 @@ Database = 'KredaStudent'
 
 [Contact:EVOSG]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -368,7 +384,7 @@ Database = 'KredaContact'
 
 [Person:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -376,7 +392,7 @@ Database = 'KredaPerson'
 
 [Address:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -384,7 +400,7 @@ Database = 'KredaAddress'
 
 [Education:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -392,7 +408,7 @@ Database = 'KredaEducation'
 
 [Course:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -400,7 +416,7 @@ Database = 'KredaCourse'
 
 [Student:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -408,7 +424,7 @@ Database = 'KredaStudent'
 
 [Contact:EZGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -420,7 +436,7 @@ Database = 'KredaContact'
 
 [Person:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -428,7 +444,7 @@ Database = 'KredaPerson'
 
 [Address:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -436,7 +452,7 @@ Database = 'KredaAddress'
 
 [Education:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -444,7 +460,7 @@ Database = 'KredaEducation'
 
 [Course:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -452,7 +468,7 @@ Database = 'KredaCourse'
 
 [Student:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -460,7 +476,7 @@ Database = 'KredaStudent'
 
 [Contact:LWSZ]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -472,7 +488,7 @@ Database = 'KredaContact'
 
 [Person:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -480,7 +496,7 @@ Database = 'KredaPerson'
 
 [Address:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -488,7 +504,7 @@ Database = 'KredaAddress'
 
 [Education:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -496,7 +512,7 @@ Database = 'KredaEducation'
 
 [Course:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -504,7 +520,7 @@ Database = 'KredaCourse'
 
 [Student:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
@@ -512,7 +528,7 @@ Database = 'KredaStudent'
 
 [Contact:FEGH]
 Driver = 'PdoMySql'
-Host = '192.168.1.201'
+Host = '192.168.10.178'
 Port =
 Username = 'kreda'
 Password = 'kreda'
