--- a/Sphere/Common/Database/Config/System.ini
+++ b/Sphere/Common/Database/Config/System.ini
@@ -1,7 +1,7 @@
 [Protocol:]
-Driver = 'PdoMySql'
-Host = '127.0.0.1'
+Driver = PdoMySql
+Host = '192.168.10.179'
 Port =
-Username = 'root'
-Password = ''
+Username = 'kreda'
+Password = 'kreda'
 Database = 'KredaProtocol'
